--- a/_layouts/analytics-engineer-landing.html
+++ b/_layouts/analytics-engineer-landing.html
@@ -254,90 +254,190 @@
                 <br>They work on the backend, dealing with databases, data warehouses, ETL processes, and ensuring data integrity and performance.
               </p>
               <div class="skills-wrap">
-                <div class="skills-column">
-                  <h5>Tools</h5>
-                  <div class="logo-list">
-                      <div class="logo-col">
-                        <div class="logo-label">
-                          <div class="logo-container">
-                            <img src="/public/images/logos-microsoft-power-bi.svg" />
+                <div class="skills-wrap-col">
+                  <div class="skills-col">
+                    <h5>Data Warehouses</h5>
+                    <div class="logo-list">
+                        <div class="logo-col">
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/tabler-brand-databricks.svg" />
+                            </div>
+                            <p class="p2">Databricks</p>
                           </div>
-                          <p class="p2">Power BI</p>
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/logos-snowflake-icon.svg" />
+                            </div>
+                            <p class="p2">Snowflake</p>
+                          </div>           
                         </div>
-                        <div class="logo-label">
-                          <div class="logo-container">
-                            <img src="/public/images/logos-snowflake-icon.svg" />
+                        <div class="logo-col">
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/simple-icons-amazonredshift.svg" />
+                            </div>
+                            <p class="p2">Redshift</p>
                           </div>
-                          <p class="p2">Snowflake</p>
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/google-bigquery-icon-1.svg" />
+                            </div>
+                            <p class="p2">BigQuery</p>
+                          </div> 
                         </div>
-                        <div class="logo-label">
-                          <div class="logo-container">
-                            <img src="/public/images/logos-tableau.svg" />
-                          </div>
-                          <p class="p2">Tableau</p>
-                        </div>            
-                      </div>
-                      <div class="logo-col">
-                        <div class="logo-label">
-                          <div class="logo-container">
-                            <img src="/public/images/logos-looker.svg" />
-                          </div>
-                          <p class="p2">Looker</p>
-                        </div>
-                        <div class="logo-label">
-                          <div class="logo-container">
-                            <img src="/public/images/google-bigquery-icon-1.svg" />
-                          </div>
-                          <p class="p2">BigQuery</p>
-                        </div>
-                        <div class="logo-label">
-                          <div class="logo-container">
-                            <img src="/public/images/logos-aws-redshift.svg" />
-                          </div>
-                          <p class="p2">AWS</p>
-                        </div>  
-                      </div>
-                  </div>
-                </div>
-                <div class="skills-column">
-                  <h5>Tasks</h5>
-                  <div class="skills-list">
-                    <div class="logo-label">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
-                        <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>
-                      <p class="p2">Data  Collection and Cleaning</p>
-                    </div>
-                    <div class="logo-label">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
-                        <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>
-                      <p class="p2">Data Analysis and Interpretation</p>
-                    </div>
-                    <div class="logo-label">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
-                        <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>
-                      <p class="p2">Reporting and Visualization</p>
                     </div>
                   </div>
-                </div>
-                <div class="skills-column">
-                  <h5>Soft skills</h5>
-                  <div class="skills-list">
-                    <div class="logo-label">
+                  <div class="skills-col">
+                    <h5>BI Tools</h5>
+                    <div class="logo-list">
+                        <div class="logo-col">
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/logos-microsoft-power-bi.svg" />
+                            </div>
+                            <p class="p2">Power BI</p>
+                          </div>
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/logos-tableau.svg" />
+                            </div>
+                            <p class="p2">Tableau</p>
+                          </div>            
+                        </div>
+                        <div class="logo-col">
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/logos-looker.svg" />
+                            </div>
+                            <p class="p2">Looker</p>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="skills-col">
+                    <h5>Tasks</h5>
+                    <div class="skills-list">
+                      <div class="logo-label">
                         <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
                           <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>  
-                      <p class="p2">Presentations</p>
-                    </div>
-                    <div class="logo-label">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
-                        <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>
-                      <p class="p2">Gathering requirements</p>
+                        </svg>
+                        <p class="p2">Data Pipeline Optimization</p>
+                      </div>
+                      <div class="logo-label">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                          <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <p class="p2">Data Cleansing and Modeling</p>
+                      </div>
+                      <div class="logo-label">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                          <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <p class="p2">Dataset Transformation for BI Teams</p>
+                      </div>
+                      <div class="logo-label">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                          <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <p class="p2">Monitoring and Automation of Data Flows</p>
+                      </div>
+
                     </div>
                   </div>
+                </div>
+                <div class="skills-wrap-col">
+                  <div class="skills-col">
+                    <h5>Data Integration</h5>
+                    <div class="logo-list">
+                        <div class="logo-col">
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/fivetran-logo.svg" />
+                            </div>
+                            <p class="p2">Fivetran</p>
+                          </div>
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/logos-dbt-icon.svg" />
+                            </div>
+                            <p class="p2">dbt</p>
+                          </div>         
+                        </div>
+                        <div class="logo-col">
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/simple-icons-matillion.svg" />
+                            </div>
+                            <p class="p2">Matillion</p>
+                          </div>
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/hightouch-icon-black-1.svg" />
+                            </div>
+                            <p class="p2">Hightouch</p>
+                          </div>   
+                        </div>
+                    </div>
+                  </div>
+                  <div class="skills-col">
+                    <h5>Complementary</h5>
+                    <div class="logo-list">
+                        <div class="logo-col">
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/mdi-github.svg" />
+                            </div>
+                            <p class="p2">GitHub</p>
+                          </div>
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/tabler-sql.svg" />
+                            </div>
+                            <p class="p2">SQL/NoSQL</p>
+                          </div>          
+                        </div>
+                        <div class="logo-col">
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/logos-docker-icon.svg" />
+                            </div>
+                            <p class="p2">Docker</p>
+                          </div>
+                          <div class="logo-label">
+                            <div class="logo-container">
+                              <img src="/public/images/logos-airflow-icon.svg" />
+                            </div>
+                            <p class="p2">Airflow</p>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+
+                  <div class="skills-col">
+                    <h5>Soft skills</h5>
+                    <div class="skills-list">
+                      <div class="logo-label">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                            <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                          </svg>  
+                        <p class="p2">Collaboration with Data Analysts and Engineers</p>
+                      </div>
+                      <div class="logo-label">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                          <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <p class="p2">Presentation of Technical Concepts to Non-Technical Teams</p>
+                      </div>
+                      <div class="logo-label">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                          <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <p class="p2">Problem-Solving in Complex Data Environments</p>
+                      </div>
+                    </div>
+                  </div>
+  
                 </div>
               </div>
               <div class="course-link-wrap">
@@ -407,7 +507,7 @@
                     <p class="p2">Staff</p>
                   </div>
                 </div>
-                <div>
+                <div class="salary-insights">
                   <div class="logo-label">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
                       <path d="M6.25 18.125C6.25 18.125 8.125 18.125 10.625 22.5C10.625 22.5 17.5738 11.0412 23.75 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
