--- a/_layouts/data-analyst-landing.html
+++ b/_layouts/data-analyst-landing.html
@@ -401,7 +401,7 @@
                     </div>
                   </div>
                   <div class="skills-col">
-                    <h5>Complimentary</h5>
+                    <h5>Complementary</h5>
                     <div class="logo-list">
                         <div class="logo-col">
                           <div class="logo-label">
