fixed bugs, updated tools for BI dev

--- a/_layouts/data-engineer-landing.html
+++ b/_layouts/data-engineer-landing.html
@@ -537,7 +537,7 @@
                     <p class="p2">Staff</p>
                   </div>
                 </div>
-                <div>
+                <div class="salary-insights">
                   <div class="logo-label">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none">
                       <path d="M6.25 18.125C6.25 18.125 8.125 18.125 10.625 22.5C10.625 22.5 17.5738 11.0412 23.75 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
