added testimonials section and page

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -193,6 +193,9 @@
               </div>
             </section>
 
+            <!-- Unleash your potential - key offers -->
+            {%- include testimonials.html -%}
+
             <!-- Course promo -->
             <section class="course-promo">
               <h2 class="centered gradient">Master your data skills with our Data Analytics and Engineering Course</h2>
