--- a/_layouts/testimonials-page.html
+++ b/_layouts/testimonials-page.html
@@ -58,7 +58,7 @@
                         At Surfalytics, our primary mission is to improve your life. We are not interested in simply giving plain advice and links for training. We genuinely want you to achieve your goal. We understand that your family is behind you, and you work hard to provide the best for your loved ones.
                       </p>
                       <p class="p2">
-                        In whatever interactions we have, we will do everything possible to achieve tangible results because your success equals my success.
+                        In whatever interactions we have, we will do everything possible to achieve tangible results because your success equals our success.
                       </p>
                       <p class="p2">
                         Here are some stories of Surfalytics mentees who achieved great results.
@@ -71,27 +71,8 @@
         <!-- Testimonials cards -->
 
         <section class="testimonials">
-            <div class="potential-wrap">
-                <div id="testimonial-full-1" class="potential-card card-color">
-                    {%- include markdown-files/testimonials/testimonial-full-1.md -%}        
-                </div>
-                <div id="testimonial-full-2" class="potential-card card-color">
-                    {%- include markdown-files/testimonials/testimonial-full-2.md -%}        
-                </div>
-                <div id="testimonial-full-3" class="potential-card card-color">
-                    {%- include markdown-files/testimonials/testimonial-full-3.md -%}        
-                </div>
-                <!-- <div id="testimonial-full-4" class="potential-card card-color">
-                    {%- include markdown-files/testimonials/testimonial-full-4.md -%}        
-                </div>
-                <div id="testimonial-full-5" class="potential-card card-color">
-                    {%- include markdown-files/testimonials/testimonial-full-5.md -%}        
-                </div>
-                <div id="testimonial-full-6" class="potential-card card-color">
-                    {%- include markdown-files/testimonials/testimonial-full-6.md -%}        
-                </div> -->
-            </div>
-
+                <div class="shoutout-embed" data-widgetTitle="Surfalytics (3)" data-widgetId="d3b01806-5d42-4858-96ca-c6819b272fab"></div>
+                <script class="shoutout-script" src="https://shoutout.io/static/website/js/embed.js" defer></script>            
         </section>
 
 
