added testimonials to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,7 @@
           <div class="navbar-nav">
             <div class="navbar-links">
               <a href="/pages/about/">About</a>
+              <a href="/pages/testimonials-page/">Testimonials</a>
               <a href="https://surfalytics.com/#services">Services</a>
               <a href="https://shop.surfalytics.com/" target="_blank">Swag</a>
               <a href="/surfalytics/2023-06-04-Introduction.html">Course</a>
@@ -55,6 +56,9 @@
               </div>
               <details>
                 <summary><a href="/pages/about/">About</a></summary>
+              </details>
+              <details>
+                <summary><a href="/pages/testimonials-page/">Testimonials</a></summary>
               </details>
               <details>
                 <summary><a href="https://surfalytics.com/#services">Services</a></summary>
