added testimonials to pages

--- a/_layouts/analytics-engineer-landing.html
+++ b/_layouts/analytics-engineer-landing.html
@@ -575,6 +575,10 @@
 
             </section>
 
+            
+          <!-- Testimonials -->
+          {%- include testimonials.html -%}
+
 
             <!-- FAQ -->
             <section id="faq" class="faq">
