--- a/_layouts/bi-developer-landing.html
+++ b/_layouts/bi-developer-landing.html
@@ -581,6 +581,8 @@
 
             </section>
 
+          <!-- Testimonials -->
+          {%- include testimonials.html -%}
 
             <!-- FAQ -->
             <section id="faq" class="faq">
