--- a/_layouts/data-engineer-landing.html
+++ b/_layouts/data-engineer-landing.html
@@ -605,6 +605,8 @@
 
             </section>
 
+          <!-- Testimonials -->
+          {%- include testimonials.html -%}
 
             <!-- FAQ -->
             <section id="faq" class="faq">
