--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -192,8 +192,8 @@
                 </div>
               </div>
             </section>
-
-            <!-- Unleash your potential - key offers -->
+            
+          <!-- Testimonials -->
             {%- include testimonials.html -%}
 
             <!-- Course promo -->
