--- a/_layouts/data-analyst-landing.html
+++ b/_layouts/data-analyst-landing.html
@@ -618,6 +618,8 @@
 
             </section>
 
+          <!-- Testimonials -->
+          {%- include testimonials.html -%}
 
             <!-- FAQ -->
             <section id="faq" class="faq">
