fixed link and updated testimonials

--- a/_includes/testimonials.html
+++ b/_includes/testimonials.html
@@ -1,8 +1,7 @@
-        <section class="testimonials">
-            <h2 class="centered gradient margin-m">Check our success stories</h3>
-                    <div class="shoutout-embed" data-widgetTitle="Surfalytics homepage" data-widgetId="00a1bc10-58d1-49da-a5e9-ce65a5bfaa8d"></div>
-                    <script class="shoutout-script" src="https://shoutout.io/static/website/js/embed.js" defer></script>    
-                    <a href="/pages/testimonials-page">
-                        <button class="cta-filled">See more reviews</button>
-                    </a>
-        </section>
+<section class="testimonials">
+    <h2 class="centered gradient margin-m">Check our success stories</h3>
+        <div class="shoutout-embed" data-widgetTitle="Surfalytics homepage" data-widgetId="93e0d462-a5be-471d-becf-33434b159d3a"></div>
+        <script class="shoutout-script" src="https://shoutout.io/static/website/js/embed.js" defer></script>    <a href="/pages/testimonials-page">
+        <button class="cta-filled">See more reviews</button>
+    </a>
+</section>
