--- a/_layouts/testimonials-page.html
+++ b/_layouts/testimonials-page.html
@@ -71,8 +71,8 @@
         <!-- Testimonials cards -->
 
         <section class="testimonials">
-                <div class="shoutout-embed" data-widgetTitle="Surfalytics (3)" data-widgetId="d3b01806-5d42-4858-96ca-c6819b272fab"></div>
-                <script class="shoutout-script" src="https://shoutout.io/static/website/js/embed.js" defer></script>            
+          <div class="shoutout-embed" data-widgetTitle="Surfalytics main" data-widgetId="74ab5c16-66e4-4a1b-866b-b12378d0eb34"></div>
+          <script class="shoutout-script" src="https://shoutout.io/static/website/js/embed.js" defer></script>
         </section>
 
 
