fixed salary info

--- a/_layouts/analytics-engineer-landing.html
+++ b/_layouts/analytics-engineer-landing.html
@@ -483,7 +483,7 @@
 
           <section>
             <div class="salaries card-color">
-              <h3>$120k CAD - Average Analytics Engineer Salary in 2024</h3>
+              <h3>$120k* - Average Analytics Engineer Salary in 2024</h3>
               <div class="salary-info">
                 <div class="salary-table">
                   <div class="salary-row">
@@ -524,6 +524,7 @@
                       Many Analytics Engineer roles have performance bonuses, equity, and other perks, especially in startups or tech companies, significantly increasing total compensation.
                     </p>
                   </div>
+                  <p class="p2">*Local currency in North America (CAD/USD)</p>
                 </div>
               </div>
             </div>
