--- a/_layouts/data-analyst-landing.html
+++ b/_layouts/data-analyst-landing.html
@@ -526,7 +526,7 @@
 
           <section>
             <div class="salaries card-color">
-              <h3>$120k CAD - Average Data Analyst Salary in 2024</h3>
+              <h3>$120k* - Average Data Analyst Salary in 2024</h3>
               <div class="salary-info">
                 <div class="salary-table">
                   <div class="salary-row">
@@ -567,6 +567,7 @@
                       Many data analyst roles have performance bonuses, equity, and other perks, especially in startups or tech companies, significantly increasing total compensation.
                     </p>
                   </div>
+                  <p class="p2">*Local currency in North America (CAD/USD)</p>
                 </div>
               </div>
             </div>
