--- a/_layouts/data-engineer-landing.html
+++ b/_layouts/data-engineer-landing.html
@@ -513,7 +513,7 @@
 
           <section>
             <div class="salaries card-color">
-              <h3>$150k CAD - Average Data Engineer Salary in 2024</h3>
+              <h3>$150k* - Average Data Engineer Salary in 2024</h3>
               <div class="salary-info">
                 <div class="salary-table">
                   <div class="salary-row">
@@ -554,6 +554,7 @@
                       Many data engineer roles have performance bonuses, equity, and other perks, especially in startups or tech companies, significantly increasing total compensation.
                     </p>
                   </div>
+                  <p class="p2">*Local currency in North America (CAD/USD)</p>
                 </div>
               </div>
             </div>
