--- a/_layouts/bi-developer-landing.html
+++ b/_layouts/bi-developer-landing.html
@@ -489,7 +489,7 @@
 
           <section>
             <div class="salaries card-color">
-              <h3>$120k CAD - Average BI Developer Salary in 2024</h3>
+              <h3>$120k* - Average BI Developer Salary in 2024</h3>
               <div class="salary-info">
                 <div class="salary-table">
                   <div class="salary-row">
@@ -530,6 +530,7 @@
                       Many BI Developer roles have performance bonuses, equity, and other perks, especially in startups or tech companies, significantly increasing total compensation.
                     </p>
                   </div>
+                  <p class="p2">*Local currency in North America (CAD/USD)</p>
                 </div>
               </div>
             </div>
