--- a/_layouts/data-analyst-landing.html
+++ b/_layouts/data-analyst-landing.html
@@ -496,7 +496,7 @@
 
           <section>
             <div class="cta-section">
-              <h3 class="gradient">Join our community and get professional support on your journey to a successful Data Analyst Career in Canada</h3>
+              <h3 class="gradient">Join our community and get professional support on your journey to a successful Data Analyst career in North America, Europe and Asia Pacific</h3>
               <a href="#membership">
                 <button class="cta-filled">Reserve my spot</button>
               </a>  
