added hero bg, fixed ui bugs

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,7 @@
 <header>
-    <!-- Subscribe banner -->
-    <a href="https://blog.surfalytics.com/" target="_blank" class="notification-bar desktop-banner">
-      <div class="container subscribe-banner">
-      💌 Subscribe to the free newsletter about Data Engineering, Analytics and career development in the data industry and join over 4000 data professionals worldwide!
-      </div>
-    </a>
-
-    <a href="https://blog.surfalytics.com/" target="_blank" class="notification-bar mobile-banner">
-      <div class="container subscribe-banner">
-      💌 Subscribe to the free newsletter about Data Engineering, Analytics and career development!
-      </div>
-    </a>
-
 
     <!-- Navigation menu -->
-      <nav class="scrolling-el" id="nav">
+        <nav>
         <div class="container">
           <a href="/">
             <img class="logo" src="/assets/surfalytics-logo.svg">
