--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -49,7 +49,7 @@
 
       <main>
             <!-- Hero -->
-            <section class="hero">
+            <section class="hero hero-bg">
               <div class="two-col hero">
                 <div class="hero">
                   <div class="h-row">
@@ -68,10 +68,6 @@
                   </a>
                 </div> 
               </div>            
-            </section>
-
-            <section class="photo">
-              <img src="/assets/images/community.png" />
             </section>
             
             <!-- About Surfalytics -->
@@ -292,6 +288,10 @@
                   </ul>
                 </div>
               </div>
+            </section>
+
+            <section class="photo">
+              <img src="/assets/images/community.png" />
             </section>
 
             <!-- FAQ -->
