--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -198,7 +198,7 @@
               <div class="two-col">
                 <div class="col-left">
                   <h4>Course Curriculum</h4>
-                  <div class="drop-down">
+                  <div class="drop-down left-aligned">
                     {%- include markdown-files/course-curriculum.md -%}
                   </div>  
                   <a target="_blank" href="https://youtu.be/bLmf98u0VuA?si=FJ5FqShC1vynwaHE">
